--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-transparent  fixed-top new_nav">
+    <div class="loader"></div>
+    <nav class="navbar navbar-expand-lg bg-transparent  fixed-top ">
         <div class="container">
           <a class="navbar-brand" href="#">
             <img src="./img/logo.png">
@@ -717,5 +718,7 @@
     </div>
 </div>
 </footer>
+<button class="go-up" aria-label="Go to top">&#8679;</button>
+<script src="index.js"></script>
 </body>
 </html>
